fix: correct spacing for recurring donation checkbox

--- a/src/Views/Form/Templates/Sequoia/assets/css/recurring.scss
+++ b/src/Views/Form/Templates/Sequoia/assets/css/recurring.scss
@@ -33,7 +33,7 @@
 		content: ' ';
 		position: absolute;
 		top: calc(50% - 12px);
-		left: 22px;
+		left: 22px !important;
 		width: 20px;
 		height: 20px;
 		border: 1px solid #b4b9be;
